<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:background="@color/blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengambilan_dataset"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/text_size_tiny"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengambilan_dataset"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/text_size_normal"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/backdrop"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title_contoh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto_e_ktp_anda"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginVertical="8dp"
                android:background="@color/blue_secondary"
                android:scaleType="centerCrop"
                android:src="@drawable/mask_group"
                app:layout_constraintTop_toBottomOf="@id/tv_title_contoh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ktp_2"
                app:layout_constraintTop_toTopOf="@id/iv_background"
                app:layout_constraintStart_toStartOf="@id/iv_background"
                app:layout_constraintEnd_toEndOf="@id/iv_background"
                app:layout_constraintBottom_toBottomOf="@id/iv_background"/>

            <TextView
                android:id="@+id/tv_ketentuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/ketentuan"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_background" />

            <TextView
                android:id="@+id/tv_ketentuan_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/neutral_70"
                app:drawableStartCompat="@drawable/ic_check_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ketentuan"
                android:text="Gunakan e-KTP fisik asli  " />

            <TextView
                android:id="@+id/tv_ketentuan_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="Foto harus terang dan jelas, tidak boleh blur"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/neutral_70"
                app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_1"
                app:layout_constraintStart_toStartOf="parent"
                app:drawableStartCompat="@drawable/ic_check_circle"
                />

            <TextView
                android:id="@+id/tv_ketentuan_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="Bukan hasil scan atau fotokopi"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/neutral_70"
                app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_2"
                app:layout_constraintStart_toStartOf="parent"
                app:drawableStartCompat="@drawable/ic_cancel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_sk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:drawablePadding="8dp"
        android:text="Semua data yang Anda unggah aman dan dirahasiakan."
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/neutral_70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_take_picture_ktp"
        app:drawableStartCompat="@drawable/ic_gpp_good"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_take_picture_ktp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/ambil_foto_ktp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/dashboardActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>