<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:background="@color/blue">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="Verifikasi Data"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_ktp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/ll_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/backdrop"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_title_contoh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foto_e_ktp_anda"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_ktp"
                        android:layout_width="0dp"
                        android:layout_height="240dp"
                        android:layout_marginVertical="8dp"
                        android:src="@drawable/ktp_2"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_contoh"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/tv_ketentuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/ketentuan"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_ktp" />

                    <TextView
                        android:id="@+id/tv_ketentuan_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:textSize="@dimen/text_size_normal"
                        app:drawableStartCompat="@drawable/ic_check_circle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_ketentuan"
                        android:text="Gunakan e-KTP fisik asli  " />

                    <TextView
                        android:id="@+id/tv_ketentuan_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:text="Foto harus terang dan jelas, tidak boleh blur"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:drawableStartCompat="@drawable/ic_check_circle" />

                    <TextView
                        android:id="@+id/tv_ketentuan_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:text="Bukan hasil scan atau fotokopi"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:drawableStartCompat="@drawable/ic_cancel_circle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cv_ktp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/text_size_tiny"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/tv_title_nik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NIK"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_input_nik"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_box_grey"
                    android:hint="Masukkan NIK Anda Sesuai Data KTP"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:letterSpacing="0"
                    android:padding="12dp"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_nik" />

                <TextView
                    android:id="@+id/tv_title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="Nama"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_input_nik" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_input_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_box_grey"
                    android:hint="Masukkan Nama Anda Sesuai Data KTP"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:letterSpacing="0"
                    android:padding="12dp"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_sk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:drawablePadding="8dp"
                android:text="Semua data yang Anda unggah aman dan dirahasiakan."
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintTop_toBottomOf="@id/ll_description"
                app:layout_constraintStart_toStartOf="parent"
                app:drawableStartCompat="@drawable/ic_gpp_good" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_lanjut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_box_blue"
                android:text="@string/lanjutkan"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                app:layout_constraintTop_toBottomOf="@id/tv_sk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_take_picture_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_box_blue_tint"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:text="@string/ambil_foto_baru"
                app:layout_constraintTop_toBottomOf="@id/btn_lanjut"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/blank_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
